# main_sentinel

./: .env_example  .gitignore  LICENSE  README.md  local.yml  production.yml  pyproject.toml
.envs/.local/: .telegram_example
compose/local/telegram/: Dockerfile  start
compose/production/telegram/: Dockerfile  entrypoint  start
src/main_sentinel/: console.py
