[tool.poetry]
name = "main_sentinel"
version = "0.1.0"
description = "Sentinel Bot Telegram"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jgmc3012/main_sentinel"
repository = "https://github.com/jgmc3012/main_sentinel"
keywords = ["sentinel"]
authors = ["Jesus Millan <jgmc3012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
aiogram = "^2.9.2"
uvloop = "^0.14.0"
ujson = "^3.1.0"
cchardet = "^2.1.6"
aiodns = "^2.0.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
python-environ = "^0.4.54"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sentinel="main_sentinel.console:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
